# swiftpaste

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
app/: main.py
app/api/v1/routes/: health.py  snippet.py
app/cache/: redis_client.py
app/core/: config.py  enum.py  errors.py  exception_handlers.py  logging.py
app/core/auth/: backend.py  jwt.py  manager.py  user.py
app/core/auth/oauth/: google.py  user_manager.py
app/core/middleware/: request_id.py  request_logging.py
app/db/: database.py  mixins.py  soft_delete.py
app/metrics/: cache_metrics.py
app/models/: __init__.py  snippet.py  snippet_version.py  user.py
app/schemas/: snippet.py  user.py
app/services/: health_service.py  snippet_service.py
app/utils/: dep.py
docs/: v0_api_contract.md
docs/v0/: api_contract.md
nginx/: default.conf  nginx.conf
tests/: load.js
